==> roboter/Hardware/STM32/32F3DISCOVERY_F303/DZX-IAR-OpenSource-v18.2.1/Source/MCU/LPC18xx/mcu_spi.c <==
#include "mcu_spi.h"
#include "mcu_cfg.h"
#include "mcu_irq.h"
#include "mcu_cgu.h"

STATUS SPI_Open(SPI* port, UINT32 number, UINT32 clkHz, UINT32 mode)
{
    STATUS status;

    
#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif

    switch (number) {
        case 0:
            port->REG = REG_SSP0;
            REGBITS_CGUBASESSP0CLK.CLKSEL = 9;
            REGBITS_CGUBASESSP0CLK.AUTOBLOCK = 1;
            REGBITS_CGUBASESSP0CLK.PD = 0;
            IRQ_RegisterHandler(IRQ_SSP0, SSP_IRQ);
            IRQ_Enable(IRQ_SSP0);
            break;
        case 1:
            port->REG = REG_SSP1;
            REGBITS_CGUBASESSP1CLK.CLKSEL = 9;
            REGBITS_CGUBASESSP1CLK.AUTOBLOCK = 1;
            REGBITS_CGUBASESSP1CLK.PD = 0;
            IRQ_RegisterHandler(IRQ_SSP1, SSP_IRQ);
            IRQ_Enable(IRQ_SSP1);
            break;
        default:
            return ERR_NOTSUPPORTED;
    }

    port->number = number;
    SPI_ApplyClock(port, clkHz);                                /* Set the clock rate */

    status = MUTEX_Create(&port->mutex, "SPI", FALSE);          /* Create an underlying mutex */
    if (status != SUCCESS) {
        return status;
    }
   
    SIGNAL_Init(&port->signals);

    port->REG->CR0.BITS.FRF = 0;                                /* Configure as SPI */
    port->REG->CR0.BITS.DSS = 7;                                /* Configure as 8-bit transfers */
    
    if (mode & SPI_CPHA1) {
        port->REG->CR0.BITS.CPHA = 1;
    } else {
        port->REG->CR0.BITS.CPHA = 0;
    }
    
    if (mode & SPI_CPOL1) {
        port->REG->CR0.BITS.CPOL = 1;
    } else {
        port->REG->CR0.BITS.CPOL = 0;
    }
    
    port->REG->CR1.BITS.MS = 0;                                 /* Configure as master */
    port->REG->CR1.BITS.SSE = 1;                                /* Enable the controller */

    mcu_spi[number] = port;                                     /* Keep a local reference of the opened port */
    return SUCCESS;
}

STATUS SPI_Close(SPI* port)
{
    INTERRUPTLOCK lock;
    STATUS status;
    
 
#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif
    
    if (mcu_spi[port->number] != port) {                    /* Is the port open? */
        return ERR_NOTINITIALIZED;
    }
    
    status = MUTEX_Destroy(&port->mutex);
    if (status != SUCCESS) {
        return status;
    }
    
    ACQUIREINTERRUPTLOCK();
    
    switch (port->number) {                                     /* Find by port number */
        case 0:
            IRQ_Disable(IRQ_SSP0);                             /* Disable possible interrupts */
            break;
        case 1:
            IRQ_Disable(IRQ_SSP1);                             /* Disable possible interrupts */
            break;
        default:
            RELEASEINTERRUPTLOCK();
            return ERR_INVALIDOPERATION;                        /* Unsupported port number */
    }

    mcu_spi[port->number] = NULL;                               /* Release the port */
    
    RELEASEINTERRUPTLOCK();
    return SUCCESS;
}

static void SPI_ApplyClock(SPI* port, UINT32 baud)
{
    UINT32 divisor;
    UINT32 prescalar;


    prescalar = 2;
    divisor = (CFG_CPUCLOCKHZ / (baud * prescalar)) - 1;
    if (divisor > 255) {                                        /* Bound the divisor */
        divisor = 255;
    }

    port->REG->CR0.BITS.SCR = divisor;                          /* Assign divisor and prescaler */
    port->REG->CPSR.BITS.CPSDVSR = prescalar;
}

STATUS SPI_Write(SPI* port, const void* data, UINT32 nbytes, UINT32 timeout)
{
    STATUS status;
    UINT32 k;
    
    
#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }

    if (data == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif
    
    status = MUTEX_Acquire(&port->mutex, timeout);
    if (status != SUCCESS) {
        return status;
    }

    port->data = (void*)data;
    port->buf = NULL;
	port->nbytes = nbytes;
	port->idx = 0;
    
    SIGNAL_Clear(&port->signals, SIGNAL_0);
    
    k = 0;                                                      
    while ((k < 4) && (k < port->nbytes)) {                     /* Load the local SPI FIFO */   
        port->REG->DR.VALUE = ((BYTE*)port->data)[k++];         /* Load the specified data bytes */
    }
    port->REG->IMSC.BITS.RTIM = 1;                              /* Enable the interrupts to complete the transfer */
    port->REG->IMSC.BITS.RXIM = 1;
    
    status = SIGNAL_WaitOne(&port->signals, SIGNAL_0, timeout); /* Block and wait for the transfer to complete */
    
    port->REG->IMSC.BITS.RTIM = 0;                              /* Disable further interrupts */
    port->REG->IMSC.BITS.RXIM = 0;
            
    if (status == SUCCESS) {
        MUTEX_Release(&port->mutex);
        return port->result;
    }
    
    MUTEX_Release(&port->mutex);
    return status;
}

STATUS SPI_Read(SPI* port, void* buf, UINT32 nbytes, UINT32 timeout)
{
    STATUS status;
    UINT32 k;
    
    
#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }

    if (buf == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif
    
    status = MUTEX_Acquire(&port->mutex, timeout);
    if (status != SUCCESS) {
        return status;
    }
    
    SIGNAL_Clear(&port->signals, SIGNAL_0);
    
    port->data = NULL;
    port->buf = buf;
	port->nbytes = nbytes;
	port->idx = 0;
   
    k = 0;                                                      
    while ((k < 4) && (k < port->nbytes)) {                     /* Load the local SPI FIFO */   
        port->REG->DR.VALUE = 0;
        k++;
    }
    
    port->REG->IMSC.BITS.RTIM = 1;                              /* Enable the interrupts to complete the transfer */
    port->REG->IMSC.BITS.RXIM = 1;

    
    status = SIGNAL_WaitOne(&port->signals, SIGNAL_0, timeout);
    
    port->REG->IMSC.BITS.RTIM = 0;                              /* Disable further interrupts */
    port->REG->IMSC.BITS.RXIM = 0;

    if (status == SUCCESS) {                                    /* Did the blocking operation receive a signal from the interrupt? */
        MUTEX_Release(&port->mutex);
        return port->result;                                    /* Yes, then return the result from the interrupt */
    }
    
    MUTEX_Release(&port->mutex);
    return status;                                              /* Return the error code */
}
