==> roboter/Hardware/STM32/32F3DISCOVERY_F303/DZX-IAR-OpenSource-v18.2.1/Source/MCU/STM32F3xx/mcu_spi.c <==
#include "mcu_spi.h"
#include "mcu_irq.h"
#include "mcu_cfg.h"
#include "mcu_rcc.h"
#include "mcu_kernel.h"

STATUS SPI_Open(SPI* port, UINT32 number, UINT32 clkHz, UINT32 mode)
{
    INTERRUPTLOCK lock;
    STATUS status;

    
#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif

    switch (number) {
        case 1:
            port->REG = REG_SPI1;
            
            ACQUIREINTERRUPTLOCK();
            REGBITS_RCCAPB2ENR.SPI1EN = 1;
            RELEASEINTERRUPTLOCK();
            
            IRQ_RegisterHandler(IRQ_SPI1, SPI_IRQ);
            IRQ_Enable(IRQ_SPI1);
            break;
        case 2:
            port->REG = REG_SPI2;
            
            ACQUIREINTERRUPTLOCK();
            REGBITS_RCCAPB1ENR.SPI2EN = 1;
            RELEASEINTERRUPTLOCK();
            
            IRQ_RegisterHandler(IRQ_SPI2, SPI_IRQ);
            IRQ_Enable(IRQ_SPI2);
            break;
        case 3:
            port->REG = REG_SPI3;
            
            ACQUIREINTERRUPTLOCK();
            REGBITS_RCCAPB1ENR.SPI3EN = 1;
            RELEASEINTERRUPTLOCK();
            
            IRQ_RegisterHandler(IRQ_SPI3, SPI_IRQ);
            IRQ_Enable(IRQ_SPI3);
            break;
        default:
            return ERR_NOTSUPPORTED;
    }

    port->number = number - 1;
   
    status = MUTEX_Create(&port->mutex, "SPI", FALSE);          /* Create an underlying mutex */
    if (status != SUCCESS) {
        return status;
    }
    
    SIGNAL_Init(&port->signals);
    
    port->REG->CR1.BITS.MSTR = 1;                               /* Select master mode */
    port->REG->CR1.BITS.CPHA = (mode & 0x1);                    /* Clock phase */
    port->REG->CR1.BITS.CPOL = ((mode >> 1) & 0x1);             /* Clock polarity */
    
    port->REG->CR1.BITS.BIDIMODE = 0;                           /* 2-wire mode */
    port->REG->CR1.BITS.BIDIOE = 1;
    port->REG->CR1.BITS.DFF = 0;                                /* 8-bit data transfers */
    port->REG->CR1.BITS.LSBFIRST = 0;
    
    port->REG->CR1.BITS.RXONLY = 0;                             /* Full duplex */
    port->REG->CR1.BITS.SSM = 0;                                /* Disable software slave management */
    
    port->REG->CR2.BITS.DS = 7;                                 /* 8-bit data transfers */
    port->REG->CR2.BITS.FRXTH = 1;
    
    SPI_ApplyClock(port, clkHz);                                /* Set the clock rate */
    
    port->REG->CR2.BITS.SSOE = 1;   
    port->REG->CR1.BITS.SPE = 1;                                /* Enable SPI */

    mcu_spi[number - 1] = port;                                 /* Keep a local reference of the opened port */
    return SUCCESS;
}

STATUS SPI_Close(SPI* port)
{
    INTERRUPTLOCK lock;
    STATUS status;
    
 
#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif
    
    if (mcu_spi[port->number] != port) {                    /* Is the port open? */
        return ERR_NOTINITIALIZED;
    }
    
    status = MUTEX_Destroy(&port->mutex);
    if (status != SUCCESS) {
        return status;
    }
    
    ACQUIREINTERRUPTLOCK();
    
    port->REG->CR1.BITS.SPE = 0;
    
    switch (port->number) {                                 /* Find by port number */
        case 1:
            IRQ_Disable(IRQ_SPI1);                          /* Disable possible interrupts */
            break;
        case 2:
            IRQ_Disable(IRQ_SPI2);                          /* Disable possible interrupts */
            break;
        case 3:
            IRQ_Disable(IRQ_SPI3);                          /* Disable possible interrupts */
            break;
        default:
            RELEASEINTERRUPTLOCK();
            return ERR_INVALIDOPERATION;                    /* Unsupported port number */
    }

    mcu_spi[port->number] = NULL;                           /* Release the port */
    
    RELEASEINTERRUPTLOCK();
    return SUCCESS;
}

static void SPI_ApplyClock(SPI* port, UINT32 baud)
{
    UINT32 input;
    static UINT32 div;
    UINT32 brc;
    
    
    switch (port->number + 1) {
        case 1:
            input = MCU_APB2ClockHz();
            break;
            
        case 2:
        case 3:
            input = MCU_APB1ClockHz();
            break;
    }
    
    div = input / baud;
    
    for (brc = 0; brc < 8; brc++) {
        if ((1 << (brc + 1)) >= div) {
            port->REG->CR1.BITS.BR = brc;
            return;
        }
    }
    
    port->REG->CR1.BITS.BR = 7;
}

STATUS SPI_Write(SPI* port, const void* data, UINT32 nbytes, UINT32 timeout)
{
    STATUS status;
    
    
#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }

    if (data == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif
    
    status = MUTEX_Acquire(&port->mutex, timeout);
    if (status != SUCCESS) {
        return status;
    }

    port->data = (void*)data;
    port->buf = NULL;
	port->nbytes = nbytes;
	port->idx = 0;
    
    SIGNAL_Clear(&port->signals, SIGNAL_0);
    
    port->REG->CR2.BITS.RXNEIE = 1;                                     /* Enable interrupt on transmit buffer empty */
    *((BYTE*)&port->REG->DR) = ((BYTE*)port->data)[0];                  /* Initiate the first transfer */
   
    status = SIGNAL_WaitOne(&port->signals, SIGNAL_0, timeout);         /* Block and wait for the transfer to complete */
    
    port->REG->CR2.BITS.TXEIE = 0;                                      /* Disable further interrupts */
    port->REG->CR2.BITS.RXNEIE = 0;
    
    if (status == SUCCESS) {
        MUTEX_Release(&port->mutex);
        return port->result;
    }
    
    MUTEX_Release(&port->mutex);
    return status;
}

STATUS SPI_Read(SPI* port, void* buf, UINT32 nbytes, UINT32 timeout)
{
    STATUS status;
    
    
#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }

    if (buf == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif
    
    status = MUTEX_Acquire(&port->mutex, timeout);
    if (status != SUCCESS) {
        return status;
    }
    
    SIGNAL_Clear(&port->signals, SIGNAL_0);
    
    port->data = NULL;
    port->buf = buf;
	port->nbytes = nbytes;
	port->idx = 0;
    
    
    port->REG->CR2.BITS.RXNEIE = 1;                                         /* Enable receive interrupt */
    *((BYTE*)&port->REG->DR) = 0;                                                      /* Initiate a transfer */
    
    status = SIGNAL_WaitOne(&port->signals, SIGNAL_0, timeout);
    
    port->REG->CR2.BITS.RXNEIE = 0;
    
    if (status == SUCCESS) {                                            /* Did the blocking operation receive a signal from the interrupt? */
        MUTEX_Release(&port->mutex);
        return port->result;                                            /* Yes, then return the result from the interrupt */
    }
    
    MUTEX_Release(&port->mutex);
    return status;                                                      /* Return the error code */
}
